fix: adds order by timestamp  (#4316)
* fix: adds order by timestamp + tests in state machines

* pr remarks